[package]
name = "OverseerITM"
version = "0.1.0"
edition = "2021"

[dependencies]
hyper = {version = "1",features = ["full"]}
tokio = {version = "1.38.1",features = ["full"]}
tower = { version = "0.4.13",features = ["full"]}
log = "0.4.22"
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3.18", features = ["tracing", "env-filter"] }
tracing = "0.1.40"
clap_derive = "4.5.11"
clap = "4.5.11"
hyper-util = { version = "0.1.6", features = ["http1", "tokio"] }
http = "1"
http-body = "1.0.1"
http-body-util = "0.1.2"
bytes = "1.6.1"
colored = "2.1.0"